--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="file:///home/diego/Documentos/Si/Si-Geo/index.html"><img src="/images/coruja.png" alt="Sala de Situação" width="35px" height="35px"></a>
+      <a class="navbar-brand" href="file:///home/diego/Documentos/Si/Si-Geo/index.html"><img src="/images/coruja.png" alt="Sala de Situação" width="40px" height="35px"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -33,7 +33,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit"   onclick="zoomToFeature();" >Buscar</button>
         </form>
       </div>
     </nav>
