--- a/app/assets/stylesheets/newsletters.scss
+++ b/app/assets/stylesheets/newsletters.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the country_states controller here.
+// Place all the styles related to the newsletters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
