--- a/app/views/adms/unlocks/new.html.erb
+++ b/app/views/adms/unlocks/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Resend unlock instructions</h2>
+<h2>Reenvie as instruções de desbloqueio</h2>
 
 <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,7 +9,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
+    <%= f.submit "Reenvie as instruções de desbloqueio" %>
   </div>
 <% end %>
 
