--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -30,5 +30,5 @@
         </div>
         </br>
         <%= f.submit 'Enviar', class: "btn btn-primary" %>
-        <%= link_to 'voltar', root_path %>
+        <%= link_to 'voltar', :back , class: "btn btn-info" %>
     <% end %>
