--- a/app/views/maps/_layout.html.erb
+++ b/app/views/maps/_layout.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="file:///home/diego/Documentos/Si/Si-Geo/index.html"><img src="/images/coruja.png" alt="Sala de Situação" width="40px" height="35px"></a>
+      <%= link_to image_tag("/images/coruja.png", border: 0, width: "40px", height: "35px", alt: "Sala de Situação"  ), root_path , class: 'navbar-brand' %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -13,10 +13,10 @@
             <a class="nav-link" href="https://fs.unb.br/saladesituacao/">Sobre</a>
           </li>
           <li class="nav-item">
-            <%= link_to "Form", new_newsletter_path, class: "nav-link" %>
+            <%= link_to "Login",new_newsletter_path, class: "nav-link" %>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Produtos da sala de situação
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -37,3 +37,6 @@
         </form>
       </div>
     </nav>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
