sistema de login tá loucura

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,7 +75,7 @@
       outline: 0;
     }
 
-    .card{
+    .card1{
       display: flex;
       justify-content: center;
       margin-left: 300px;
