--- a/app/views/adms/mailer/confirmation_instructions.html.erb
+++ b/app/views/adms/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,16 @@
-<p>Bem vindo <%= @email %>!</p>
+<br/>
+<div class="card card1" style="width: 50rem;">
+    <div class="card-header">
+        <p>Bem vindo <%= @email %>!</p>
+    </div>
+    <div class="card-body">
+       <p>Pode confirmar o email da sua conta através do link abaixo:</p>
+       <p><%= link_to 'Confirme minha conta', confirmation_url(@resource, confirmation_token: @token) %></p>
+        <%= link_to 'voltar', :back , class: "btn btn-info" %>
 
-<p>Pode confirmar o email da sua conta através do link abaixo:</p>
+    </div>
+</div>
 
-<p><%= link_to 'Confirme minha conta', confirmation_url(@resource, confirmation_token: @token) %></p>
+</br>
+
+
