--- a/app/views/adms/mailer/email_changed.html.erb
+++ b/app/views/adms/mailer/email_changed.html.erb
@@ -1,8 +1,18 @@
-<p>Olá <%= @email %>!</p>
-
-<% if @resource.try(:unconfirmed_email?) %>
+<br/>
+<div class="card card1" style="width: 50rem;">
+    <div class="card-header">
+        <p>Olá <%= @email %>!</p>
+    </div>
+    <div class="card-body">
+        <% if @resource.try(:unconfirmed_email?) %>
   <p>Estamos entrando em contato para notificá-lo de que seu e-mail está sendo alterado para <%= @resource.unconfirmed_email %>.</p>
 <% else %>
   <p>Estamos entrando em contato para notificá-lo de que seu e-mail foi alterado para
  <%= @resource.email %>.</p>
 <% end %>
+<%= link_to 'voltar', :back , class: "btn btn-info" %>
+
+    </div>
+</div>
+
+</br>
