--- a/app/views/adms/mailer/password_change.html.erb
+++ b/app/views/adms/mailer/password_change.html.erb
@@ -1,3 +1,16 @@
-<p>Olá <%= @resource.email %>!</p>
+<br/>
+<div class="card card1" style="width: 50rem;">
+    <div class="card-header">
+        <p>Olá <%= @resource.email %>!</p>
+    </div>
+    <div class="card-body">
+        <p>Estamos entrando em contato para notificá-lo de que sua senha foi alterada.</p>
+        <%= link_to 'voltar', :back , class: "btn btn-info" %>
 
-<p>Estamos entrando em contato para notificá-lo de que sua senha foi alterada.</p>
+    </div>
+</div>
+
+</br>
+
+
+
