--- a/app/views/adms/mailer/reset_password_instructions.html.erb
+++ b/app/views/adms/mailer/reset_password_instructions.html.erb
@@ -1,9 +1,23 @@
-<p>Olá <%= @resource.email %>!</p>
-
-<p>Alguém solicitou um link para alterar sua senha. Você pode fazer isso através do link abaixo.
+<br/>
+<div class="card card1" style="width: 50rem;">
+    <div class="card-header">
+        <p>Olá <%= @resource.email %>!</p>
+    </div>
+    <div class="card-body">
+        <p>Alguém solicitou um link para alterar sua senha. Você pode fazer isso através do link abaixo.
 </p>
 
 <p><%= link_to 'Mudar minha senha', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>Se você não solicitou isso, ignore este e-mail.</p>
 <p>Sua senha não será alterada até que você acesse o link acima e crie um novo.</p>
+<%= link_to 'voltar', :back , class: "btn btn-info" %>
+
+    </div>
+</div>
+
+</br>
+
+
+
+
