--- a/app/views/adms/mailer/unlock_instructions.html.erb
+++ b/app/views/adms/mailer/unlock_instructions.html.erb
@@ -1,7 +1,21 @@
-<p>Olá <%= @resource.email %>!</p>
-
-<p>Sua conta foi bloqueada devido a um número excessivo de tentativas de login malsucedidas.</p>
+<br/>
+<div class="card card1" style="width: 50rem;">
+    <div class="card-header">
+        <p>Olá <%= @resource.email %>!</p>
+    </div>
+    <div class="card-body">
+        <p>Sua conta foi bloqueada devido a um número excessivo de tentativas de login malsucedidas.</p>
 
 <p>Clique no link abaixo para desbloquear sua conta:</p>
 
 <p><%= link_to 'Desbloquear minha conta', unlock_url(@resource, unlock_token: @token) %></p>
+
+<%= link_to 'voltar', :back , class: "btn btn-info" %>
+
+    </div>
+</div>
+
+</br>
+
+
+
