--- a/app/views/adms/unlocks/new.html.erb
+++ b/app/views/adms/unlocks/new.html.erb
@@ -1,16 +1,27 @@
-<h2>Reenvie as instruções de desbloqueio</h2>
-
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
+<br/>
+<div class="card card1" style="width: 50rem;">
+    <div class="card-header">
+        <h2>Reenvie as instruções de desbloqueio</h2>
+    </div>
+    <div class="card-body">
+        <%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
+</br>
   <div class="actions">
-    <%= f.submit "Reenvie as instruções de desbloqueio" %>
+    <%= f.submit "Reenvie as instruções de desbloqueio", class: "btn btn-primary" %>
+    <%= link_to 'voltar', :back , class: "btn btn-info" %>
   </div>
 <% end %>
-
 <%= render "adms/shared/links" %>
+    </div>
+</div>
+
+</br>
+
+
+
