--- a/app/views/newsletters/edit.html.erb
+++ b/app/views/newsletters/edit.html.erb
@@ -1,7 +1,10 @@
-<%= render 'layout' %>
+
 <br/>
-<div class="card" style="width: 50rem;">
+<div class="card card1" style="width: 50rem;">
     <div class="card-header">
         <h1 class="card-title" style="text-align: center;">Editar Noticía</h1>
     </div>
 <%= render 'form' %>
+
+</br>
+</br>
