--- a/app/views/newsletters/new.html.erb
+++ b/app/views/newsletters/new.html.erb
@@ -1,6 +1,6 @@
-<%= render 'layout' %>
+
 <br/>
-<div class="card" style="width: 50rem;">
+<div class="card card1" style="width: 50rem;">
     <div class="card-header">
         <h1 class="card-title" style="text-align: center;">Nova Noticía</h1>
     </div>
@@ -8,3 +8,4 @@
         <%= render 'form' %>
     </div>
 </div>
+</br>
