sistema de login tá loucura2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,8 @@
           </li>
            <% if adm_signed_in? %>
             <li class="nav-item">
-            <%= link_to "#{current_adm.email }", newsletters_path , class: "nav-link" %>
+            <%= link_to "Gerenciar Noticias", newsletters_path , class: "nav-link" %>
           </li>
-            <li class="nav-item">
-              <%= link_to "Logout", destroy_adm_session_path , class: "nav-link" , method: :delete %>
-            </li>
           <% else %>
           <li class="nav-item">
             <%= link_to "Login", newsletters_path , class: "nav-link" %>
@@ -58,8 +55,20 @@
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
+         <% if adm_signed_in? %>
+           <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <%="#{current_adm.email}" %>
+                  </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "Logout", destroy_adm_session_path , class: "dropdown-item" , method: :delete %>
+            </div>
+            </li>
+            </ul>
+           <% end %>
           <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Buscar</button>
         </form>
       </div>
     </nav>
