--- a/app/views/newsletters/edit.html.erb
+++ b/app/views/newsletters/edit.html.erb
@@ -4,7 +4,8 @@
     <div class="card-header">
         <h1 class="card-title" style="text-align: center;">Editar Noticía</h1>
     </div>
-<%= render 'form' %>
-
-</br>
+<div class="card-body">
+        <%= render 'form' %>
+    </div>
+    </div>
 </br>
