--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -4,75 +4,69 @@
         <% @newsletter.errors.each do |message| %>
             <% x.push(message.to_s) %>
         <% end %>
-    <% end %> 
+    <% end %>
 </div>
 
 <%= form_for @newsletter do |f| %>
-    
     <% if x.include? "title" %>
+      <div>
+          <%= f.label :Titulo%> <br />
+          <%= f.text_field :title, class: "form-control is-invalid" %>
+          <div class="invalid-feedback invalido">
+              Por favor insira um Titulo!
+          </div>
+      </div>
+    <% else %>
         <div>
             <%= f.label :Titulo%> <br />
-            <%= f.text_field :title, class: "form-control is-invalid" %>
-            <div class="invalid-feedback">
-                Por favor insira um Titulo!
-            </div>
-        </div>
-        
-    <%else%>
-        <div>    
-            <%= f.label :Titulo%> <br />
             <%= f.text_field :title, class: "form-control " %>
-        </div>    
-    <%end%>
-    </br>
+        </div>
+    <% end %>
 
     <% if x.include? "description" %>
         <div>
             <%= f.label :Descrição %> <br />
             <%= f.text_area :description, size: '24x5', class: "form-control is-invalid" %>
+            <div class="invalid-feedback invalido">
+                Por favor insira uma descrição!
+            </div>
         </div>
-        <div class="invalid-feedback">
-            Por favor insira uma descrição!
-        </div>
-    <%else%>
+    <% else %>
         <div>
             <%= f.label :Descrição %> <br />
             <%= f.text_area :description, size: '24x5', class: "form-control" %>
         </div>
-    <%end%>
-    </br>
+    <% end %>
 
     <% if x.include? "link" %>
         <div>
             <%= f.label :link %> <br />
             <%= f.text_field :link, class: "form-control is-invalid"%>
+            <div class="invalid-feedback invalido">
+                Por favor insira um link !
+            </div>
         </div>
-        <div class="invalid-feedback">
-            Por favor insira um link !
-        </div>
-    <%else%>
+    <% else %>
         <div>
-            <%= f.label :link %> <br />
+            <%= f.label :link %> 
             <%= f.text_field :link, class: "form-control"%>
         </div>
-    <%end%>
-    </br>
+    <% end %>
 
     <% if x.include? "country" %>
         <div>
             <%= f.label :País %> <br />
             <%= f.text_field :country, class: "form-control is-invalid" %>
+            <div class="invalid-feedback invalido">
+              Por favor insira um País!
+            </div>
         </div>
-        
-        <div class="invalid-feedback">
-            Por favor insira um País!
-        </div>
-    <%else%>
+    <% else %>
         <div>
             <%= f.label :País %> <br />
             <%= f.text_field :country, class: "form-control" %>
         </div>
-    <%end%>
+    <% end %>
     </br>
     <%= f.submit 'Enviar', class: "btn btn-primary" %>
     <%= link_to 'voltar', :back , class: "btn btn-info" %>
