--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
            <% if adm_signed_in? %>
             <li class="nav-item">
             <%= link_to "Gerenciar Noticias", newsletters_path , class: "nav-link" %>
+            <%= link_to 'Edit profile', edit_user_registration_path, class: "navbar-link" %>
+            <%= link_to "Profile", current_user %>
+            <%= link_to "Settings", edit_user_path(@adm) %>
           </li>
           <% else %>
           <li class="nav-item">
@@ -69,6 +72,8 @@
         </form>
       </div>
     </nav>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 <%= yield %>
   </body>
 </html>
