--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,7 @@
           </li>
            <% if adm_signed_in? %>
             <li class="nav-item">
-            <%= link_to "Gerenciar Noticias", newsletters_path , class: "nav-link" %>
-            <%= link_to 'Edit profile', edit_user_registration_path, class: "navbar-link" %>
-            <%= link_to "Profile", current_user %>
-            <%= link_to "Settings", edit_user_path(@adm) %>
+            <%= link_to "Gerenciar Noticias", newsletters_path , class: "nav-link" %> 
           </li>
           <% else %>
           <li class="nav-item">
@@ -63,6 +60,7 @@
                   </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "Logout", destroy_adm_session_path , class: "dropdown-item" , method: :delete %>
+              <%= link_to 'Edit profile', edit_adm_registration_path, class: "dropdown-item" %>
             </div>
             </li>
             </ul>
