--- a/app/views/adms/confirmations/new.html.erb
+++ b/app/views/adms/confirmations/new.html.erb
@@ -13,11 +13,10 @@
   </div>
     </br>
   <div class="actions">
-    <%= f.submit "Reenviar instruções de confirmação" %>
-    <%= link_to 'voltar', :back , class: "btn btn-primary" %>
+    <%= f.submit "Reenviar instruções de confirmação",class: "btn btn-primary" %>
+    <%= link_to 'voltar', :back , class: "btn btn-info" %>
   </div>
 <% end %>
 <%= render "adms/shared/links" %>
     </div>
 </div>
-
