--- a/app/views/adms/mailer/reset_password_instructions.html.erb
+++ b/app/views/adms/mailer/reset_password_instructions.html.erb
@@ -7,7 +7,7 @@
         <p>Alguém solicitou um link para alterar sua senha. Você pode fazer isso através do link abaixo.
 </p>
 
-<p><%= link_to 'Mudar minha senha', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'Mudar minha senha', edit_password_url(@resource, reset_password_token: @token),class: "btn btn-primary" %></p>
 
 <p>Se você não solicitou isso, ignore este e-mail.</p>
 <p>Sua senha não será alterada até que você acesse o link acima e crie um novo.</p>
@@ -17,7 +17,3 @@
 </div>
 
 </br>
-
-
-
-
