--- a/app/views/adms/registrations/edit.html.erb
+++ b/app/views/adms/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <br/>
 <div class="card card1" style="width: 50rem;">
     <div class="card-header">
-        <h2>Edit <%= resource_name.to_s.humanize %></h2>
+        <h2 style="text-align: center;">Editar Conta</h2>
     </div>
     <div class="card-body">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
@@ -11,13 +11,12 @@
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :senha %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :senha %> <i>(Deixe em branco se não quiser alterá la)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
@@ -31,24 +30,22 @@
   </div>
 
   <div class="field">
-    <%= f.label :senha_atual %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :senha_atual %> <i>(Digite a senha atual para efetivar as mudanças)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
-
+</br>
   <div class="actions">
-    <%= f.submit "Atualizar" %>
+    <%= f.submit "Atualizar",class: "btn btn-primary" %>
   </div>
 <% end %>
+</br>
+<h3>Cancelar minha conta</h3>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "
-Você tem certeza?" }, method: :delete %></p>
+<p>Infeliz? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "
+Você tem certeza?" }, method: :delete ,class: "btn btn-primary"%></p>
 <%= link_to 'voltar', :back , class: "btn btn-info" %>
 
     </div>
 </div>
 
 </br>
-
-
