--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <%= link_to image_tag("/images/coruja.png", border: 0, width: "40px", height: "35px", alt: "Sala de Situação"  ), root_path , class: 'navbar-brand' %>
+      <%= link_to image_tag("/images/coruja.png", border: 0, width: "45px", height: "35px", alt: "Sala de Situação", padding: 0, margin: 0 ), root_path , class: 'navbar-brand' %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,11 +23,11 @@
           </li>
            <% if adm_signed_in? %>
             <li class="nav-item">
-            <%= link_to "Gerenciar Noticias", newsletters_path , class: "nav-link" %> 
+            <%= link_to "Gerenciar Notícias", newsletters_path , class: "nav-link" %>
           </li>
           <% else %>
           <li class="nav-item">
-            <%= link_to "Login", newsletters_path , class: "nav-link" %>
+            <%= link_to "Entrar", newsletters_path , class: "nav-link" %>
           </li>
           <% end %>
 
@@ -59,8 +59,8 @@
                   <%="#{current_adm.email}" %>
                   </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to "Logout", destroy_adm_session_path , class: "dropdown-item" , method: :delete %>
-              <%= link_to 'Edit profile', edit_adm_registration_path, class: "dropdown-item" %>
+                  <%= link_to 'Editar Conta', edit_adm_registration_path, class: "dropdown-item" %>
+                  <%= link_to "Sair", destroy_adm_session_path , class: "dropdown-item" , method: :delete %>
             </div>
             </li>
             </ul>
@@ -70,8 +70,23 @@
         </form>
       </div>
     </nav>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if notice.to_s != "" %>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong class="notice"><%= notice %></strong>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <% end %>
+
+    <% if alert.to_s != "" %>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong class="alert"><%= alert %></strong>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <% end %>
 <%= yield %>
   </body>
 </html>
