--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
             </ul>
            <% end %>
           <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Buscar</button>
+          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit" disabled>Buscar</button>
         </form>
       </div>
     </nav>
