--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -4,13 +4,9 @@
 
   //Função que retorna uma cor baseado no valor dado no geojson
   function getColor(d) {
-      return d > 100 ? '#800026' :
-               d > 60  ? '#BD0026' :
-               d > 50  ? '#E31A1C' :
-               d > 40  ? '#FC4E2A' :
-               d > 30   ? '#FD8D3C' :
-               d > 20   ? '#FEB24C' :
-               d > 10   ? '#FED976' :
+      return   d > 10  ? '#ff0000' :
+               d > 5   ? '#ffff00' :
+               d > 0   ? '#009933' :
                           '#FFEDA0';
     }
 
@@ -129,7 +125,7 @@
       <% @newsletter.each_with_index do |k, i|%>
         k = <%= k.to_json.html_safe %>
         if (it.properties.NM_ESTADO == k.state) {
-            it.color = 101
+            it.color = it.color + 1
       }
       <% end %>
     })
@@ -212,7 +208,7 @@
     var legend = L.control({ position: "bottomright" })
     legend.onAdd = function (map) {
       var div = L.DomUtil.create("div", "info legend"),
-        grades = [0, 10, 20, 30, 40, 50 ,60 ,100],
+        grades = [1, 5, 10],
         labels = [],
         from,
         to
