--- a/app/views/adms/registrations/edit.html.erb
+++ b/app/views/adms/registrations/edit.html.erb
@@ -8,7 +8,7 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :Usuário %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -16,7 +16,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :senha %> <i>(Deixe em branco se não quiser alterá la)</i><br />
+    <%= f.label :Senha %> <i>(Deixe em branco se não quiser alterá la)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
@@ -41,7 +41,7 @@
 </br>
 <h3>Cancelar minha conta</h3>
 
-<p>Infeliz? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "
+<p>Insatisfeito? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "
 Você tem certeza?" }, method: :delete ,class: "btn btn-primary"%></p>
 <%= link_to 'voltar', :back , class: "btn btn-info" %>
 
