--- a/app/views/adms/registrations/new.html.erb
+++ b/app/views/adms/registrations/new.html.erb
@@ -8,12 +8,12 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :Usuário %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :senha %>
+    <%= f.label :Senha %>
     <% if @minimum_password_length %>
     <em>(mínimo <%= @minimum_password_length %> caracteres)</em>
     <% end %><br />
